--- a/CarsCrete/ClientApp/src/app/date-picker/date-picker.component.css
+++ b/CarsCrete/ClientApp/src/app/date-picker/date-picker.component.css
@@ -94,11 +94,17 @@
     position: relative;
     z-index: 300;
     height: 30px;
+    padding: 0 5px;
     background-color: white;
     display: flex;
     align-items: center;
     border-radius: 4px;
     border: 1px solid gray;
+    cursor: pointer;
+}
+.fa-calendar{
+    position: absolute;
+    right: 5px;
 }
 .invalid-date{
     background-color:rgba(230, 230, 230, 0.582) !important; 
@@ -107,6 +113,9 @@
 
 .container11{
     position: relative;
+}
+.today{
+    background-color: rgb(235, 243, 129);
 }
 .blur-date{
     position: fixed;
