--- a/CarsCrete/ClientApp/src/app/date-picker/date-picker.component.html
+++ b/CarsCrete/ClientApp/src/app/date-picker/date-picker.component.html
@@ -1,6 +1,7 @@
 <div class="container11">
-    <div class="current-date" (click)="hide()">
+    <div class="current-date input" tabindex="3" (click)="hide()">
         <span>{{Out[Prop] | date:'dd.MM.yyyy'}}</span>
+        <i class="fa fa-calendar"></i>
     </div>
     <div [ngClass]="{'show-picker':showPicker}" class="container">
       
@@ -17,7 +18,8 @@
           <div class="rows" *ngFor="let week of calendar">
             <div class="cols" *ngFor="let day of week; let i = index">
               
-              <div (mouseover)="shooseProgress(day, true)" (mouseleave)="shooseProgress(day, false)" class="item" [ngClass]="{'not-current':!getClass(day),'opposite-choose':checkOppositeChoose(day) , 'choosed-date':(DateStart?DateStart.getTime()==day.getTime():false) || (DateFinish?DateFinish.getTime()==day.getTime():false) || (Out[Prop]?Out[Prop].getTime()==day.getTime():false), 'invalid-date':(day.getTime()<MinDate.getTime() || (MaxDate?day.getTime()>MaxDate.getTime():false) || !checkDate(day)), 'choosed-start':getChoosed(day,true), 'choosed-finish':getChoosed(day,false)}" (click)="pick(day)">
+              <div (mouseover)="shooseProgress(day, true)" (mouseleave)="shooseProgress(day, false)" class="item" 
+              [ngClass]="{'not-current':!getClass(day),'opposite-choose':checkOppositeChoose(day) , 'choosed-date':(DateStart?DateStart.getTime()==day.getTime():false) || (DateFinish?DateFinish.getTime()==day.getTime():false) || (Out[Prop]?Out[Prop].getTime()==day.getTime():false), 'invalid-date':(day.getTime()<MinDate.getTime() || (MaxDate?day.getTime()>MaxDate.getTime():false) || !checkDate(day)), 'choosed-start':getChoosed(day,true), 'choosed-finish':getChoosed(day,false)}" (click)="pick(day)">
                 {{day | date: 'dd'}}
               </div>
             </div>
