--- a/CarsCrete/ClientApp/src/app/sales/sales.component.html
+++ b/CarsCrete/ClientApp/src/app/sales/sales.component.html
@@ -1,7 +1,7 @@
 
-<div *ngIf="slides.length>0" class="container">
+<!-- <div *ngIf="slides.length>0" class="container">
   <h2>{{'SPECIAL_DEALS' | translate}}</h2>
-</div>
+</div> -->
 <div *ngIf="showCarousel && slides.length>0" id="carousel" class="carousel slide" data-ride="carousel">
   <div class="sales">
     
