--- a/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.css
+++ b/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.css
@@ -94,7 +94,7 @@ form{
     display: flex;
     flex-direction: column;
     padding: 0 10px 10px 0;
-    border-bottom: 1px solid gray;
+    border-bottom: 1px solid rgb(212, 212, 212);
     font-size: 10pt;
 
 }
