--- a/CarsCrete/ClientApp/src/app/messager/messager.component.css
+++ b/CarsCrete/ClientApp/src/app/messager/messager.component.css
@@ -73,21 +73,29 @@
 }
 .panel i{
     position: absolute;
-    right: 0;
-    font-size: 18px;
-    line-height: 26px;
     cursor: pointer;
-    color:white;
-    border-radius: 0 0 4px 0;
     width: 30px;
-    background-color: rgb(79, 119, 250);
     height: 30px;  
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 18px;
 }
-.panel i:hover{
+.panel i.fa-paper-plane{
+    right: 0;
+    color:white;
+    border-radius: 0 0 4px 0;
+    background-color: rgb(79, 119, 250);
+}
+.panel i.fa-car{
+    border-left: 1px solid gray; 
+    right: 30px;
+}
+.panel i.fa-paper-plane:hover{
     background-color: blue;
+}
+.panel i.fa-car:hover{
+    color: blue;
 }
 .panel textarea{
     width: 100%;
