Сделал кнопку прокрутки

--- a/CarsCrete/ClientApp/src/app/app.component.html
+++ b/CarsCrete/ClientApp/src/app/app.component.html
@@ -3,3 +3,4 @@
 <sales></sales>
 <footer></footer>
 <messager *ngIf="showMes"></messager>
+<span class="scroll" (click)="scroll()" [ngClass]="{'scroll-show':showButtonUp}"><i class="fa fa-arrow-up" aria-hidden="true"></i></span>
