--- a/CarsCrete/ClientApp/src/app/app.component.css
+++ b/CarsCrete/ClientApp/src/app/app.component.css
@@ -4,3 +4,24 @@
     padding-top: 50px;
   }
 }
+.scroll{
+  position: fixed;
+  right: -30px;
+  bottom: 50px;
+  width: 30px;
+  height: 30px;
+  z-index: 500;
+  transition: 0.2s ease-out;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(76, 200, 241);
+  cursor: pointer;
+}
+.scroll:hover{
+  background-color: rgb(30, 190, 243);
+}
+.scroll-show{
+  right: 20px !important;
+}
