В мессенджере есть топики, которые можно открыть и там будут сообщения. (Увидишь) Сейчас там выводится только имя получателя и время последнего сообщения, нужно добавить фото получателя к имени. (Ссылка на фото приходит с сервера в каждом топике, спроси где найти)

--- a/CarsCrete/ClientApp/src/app/messager/messager.component.html
+++ b/CarsCrete/ClientApp/src/app/messager/messager.component.html
@@ -36,7 +36,9 @@
   </form>
   <div class="topic top-topic" (click) = "showTopic()" [ngStyle]="{'margin-top':showTopics?'10px':''}"  *ngIf="(userProfile || showTopics) && (!!currentTopic)">
     <div class="row">
-      <div class="col-sm-7"><span>{{currentTopic.User?currentTopic.User.Name:''}}</span></div>
+      <div class="col-sm-7">
+        <img class ="user-img-small"  src="{{currentTopic.User?currentTopic.User.Photo:''}}" alt="">
+        <span>{{currentTopic.User?currentTopic.User.Name:''}}</span></div>
       <div class="col-sm-5"><span>{{currentTopic.ModifyDate | date: 'HH:mm'}}</span></div>
     </div>
   </div>
@@ -54,7 +56,9 @@
     </div>
     <div class="topic" [ngClass]="{'hidden':!!currentTopic, 'not-seen':(!top.Seen && this.userId == top.UserReciverId)}" (click) = "showTopic(top)"  *ngFor="let top of topics">
       <div class="row">
-        <div class="col-sm-7"><span>{{top.User?top.User.Name:''}}</span></div>
+        <div class="col-sm-7">
+          <img class ="user-img-small"  src="{{top.User?top.User.Photo:''}}" alt="">
+          <span>{{top.User?top.User.Name:''}}</span></div>
         <div class="col-sm-5"><span>{{top.ModifyDate | date: 'HH:mm'}}</span></div>
       </div>
     </div>
