--- a/CarsCrete/ClientApp/src/app/messager/messager.component.css
+++ b/CarsCrete/ClientApp/src/app/messager/messager.component.css
@@ -205,7 +205,7 @@ h3{
     background-color: rgb(189, 253, 189);
     min-height: 50px;
     cursor: pointer;
-    
+    padding-left:5px 
     
 }
 .top-topic{
