--- a/CarsCrete/ClientApp/src/app/feedback/feedback.component.html
+++ b/CarsCrete/ClientApp/src/app/feedback/feedback.component.html
@@ -71,7 +71,7 @@
                         <p>
                             <img class ="user-img-small"  src="{{com.User.Photo}}"> {{com.User.Name}}   |   
                             
-                            <i class="fa fa-car"></i> {{com.Car.Model}}
+                            <span routerLink="/booking/{{com.Car.Id}}" class="car-model"><i class="fa fa-car"></i> {{com.Car.Model}}</span>
                         </p>
                     </div>
                     <div class="col-sm-3">
