--- a/CarsCrete/ClientApp/src/app/cars/cars.component.css
+++ b/CarsCrete/ClientApp/src/app/cars/cars.component.css
@@ -21,6 +21,7 @@
 .row{
     margin:0;
 }
+
 .filters .col-sm-3{
     position: relative;
     cursor: pointer;
@@ -90,8 +91,8 @@
     width: 100%;
     z-index: 100;
     height: 100%;
-    background-color: rgba(77, 77, 77, 0.253);
-    transition: 0.5s;
+    background-color: rgba(48, 48, 48, 0.493);
+    transition: 0.2s;
     opacity: 0;
 }
 .car-img:hover{
@@ -156,7 +157,7 @@
 .price span{
     position: absolute;
     top:20px;
-    left: 40px;
+    left: 35px;
     transform: rotate(10deg);
     font-size: 16px;
     font-weight: bold;
@@ -178,8 +179,18 @@
     font-size: 16px;
     font-weight: bold;
 }
+.rating{
+    position: absolute;
+    top: 10px;
+    z-index: 120;
+    transition: 0.2s;
+    right: -130px;
+}
 .car-img:hover .discount{
     left:0;
+}
+.car-img:hover .rating{
+    right:5px;
 }
 
 
