--- a/CarsCrete/ClientApp/src/app/cars/cars.component.html
+++ b/CarsCrete/ClientApp/src/app/cars/cars.component.html
@@ -20,6 +20,9 @@
         <div *ngIf="car.Sales.length>0" class="discount">
           <span>{{getCarPrice(car,true)}}</span>
         </div>
+        <div class="rating">
+          <rating [mark]="car.Mark"></rating>
+        </div>
       </div>
       <div class="car-info">
         <h5>{{car.Model}}</h5>
