--- a/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
+++ b/CarsCrete/ClientApp/src/app/user-profile/user-profile.component.html
@@ -112,8 +112,8 @@
           <div class="car">
             <img src="{{book.Car.Photo}}" alt="">
             <div>
-              <p><i class="fa fa-car"></i>{{book.Car.Model}}</p>
-              <span><i class="fa fa-dollar"></i>{{book.Price}}€</span>
+              <p routerLink="/booking/{{book.Car.Id}}"><i class="fa fa-car"></i>{{book.Car.Model}}</p>
+              <span><i class="fa fa-dollar"></i>{{book.Sum}}€</span>
             </div>
           </div>
           
