--- a/CarsCrete/ClientApp/src/app/sales/sales.component.css
+++ b/CarsCrete/ClientApp/src/app/sales/sales.component.css
@@ -10,7 +10,10 @@
     margin: 5px;
     border: 1px solid black;
     border-radius: 4px;
+    cursor: pointer;
 }
+
+
 .sale-item{
     
     transition: 0.5s;
@@ -18,6 +21,32 @@
     width: 100%;
     justify-content: center;
     position: absolute;
+}
+.line {
+    margin-top: 30px;
+    font-size: 12pt;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+.line span {
+    background-color: #ffffff;
+    position: relative;
+    z-index: 1;
+    padding: 0px 8px;
+    cursor: pointer;
+    color: rgb(138, 138, 138);
+}
+.line:after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 1px;
+    background-color: rgb(185, 192, 194);
+    position: absolute;
+    top: 50%;
+    margin-top: -1px;
+    z-index: 0;
 }
 .next{
     transition: 0.5s;
@@ -123,4 +152,33 @@
         margin: 5px 0;
     }
     
+}
+
+.carousel-control{
+    border-radius: 50%;
+    z-index: 100;
+    width: 50px;
+    height: 50px;
+    background-color: gray;
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
+    top:40%;
+}
+.left{
+    left:30px;
+}
+.right{
+    right: 30px;
+}
+.glyphicon-chevron-right, .glyphicon-chevron-left{
+    right: auto;
+    position: unset;
+    left: auto;
+    display: flex;
+    margin: 0;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
 }
