--- a/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.css
+++ b/CarsCrete/ClientApp/src/app/booking-form/booking-form.component.css
@@ -50,14 +50,14 @@ form{
 }
 .detail-item{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
     margin-right: 5px;
-    font-size: 8pt;
+    font-size: 12pt;
+    margin-bottom: 10px;
 
 }
 .detail-item>i{
+    margin-right: 7px;
     padding: 5px;
     width: 30px;
     height: 30px;
@@ -70,9 +70,15 @@ form{
 }
 .details{
     margin-bottom: 10px;
-    display: flex;
+    margin-top: 10px;
 
     
+}
+.include{
+    margin-left: 10px;
+}
+.include i{
+    color:green;
 }
 .form-container{
     width: 100%;
@@ -85,8 +91,6 @@ form{
 .car-info{
     margin-bottom: 20px;
     font-size: 12pt;
-    
-
 }
 .car-info .col-sm-7{
     height: 100%;
@@ -107,6 +111,7 @@ form{
     flex-direction: column;
     padding: 0 10px 10px 0;
     border-bottom: 1px solid rgb(212, 212, 212);
+    margin-bottom: 10px;
     font-size: 10pt;
 
 }
@@ -156,7 +161,13 @@ button{
     
 }
 @media (max-width: 767px){
-    
+    .car-info-area>div:not(:first-child){
+        margin-top:20px; 
+    }
+    .car-info-area>div:last-child{
+        padding-bottom:10px;
+        border-bottom: 1px solid lightgray; 
+    }
     .item{
         width: 100%;
     }
