--- a/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/CarsCrete/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -187,7 +187,7 @@ li.link-active a:focus {
         left: 20px;
         top:0;
         height: 100%;
-        
+        max-height: 60px;
         right: auto;
         
         color:rgb(211, 211, 211);
